# execution26

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Makefile  README.md  bulk_8hpp_source.html  fwd__env_8hpp_source.html  md_docs_contributing.html  md_docs_overview.html  namespacebeman_1_1execution.html  navtreedata.js  navtreeindex0.js  schedule__from_8hpp_source.html  split_8hpp_source.html
.github/workflows/: ci_tests.yml  pre-commit.yml
cmake/presets/: CMakeGenericPresets.json  CMakeLinuxPresets.json
docs/: contributing.md  overview.md
etc/: clang-flags.cmake  gcc-flags.cmake  gcc-toolchain.cmake  llvm-master-toolchain.cmake
examples/: CMakeLists.txt  inspect.cpp  intro-1-hello-world.cpp  intro-2-hello-async.cpp  intro-5-consumer.cpp  meta.hpp  sender-demo.cpp  stackoverflow.cpp
include/beman/execution/: execution.hpp
include/beman/execution/detail/: as_awaitable.hpp  as_tuple.hpp  associate.hpp  basic_sender.hpp  basic_state.hpp  bulk.hpp  completion_domain.hpp  counting_scope.hpp  counting_scope_base.hpp  counting_scope_join.hpp  forwarding_query.hpp  fwd_env.hpp  get_completion_signatures.hpp  get_domain_late.hpp  just.hpp  let.hpp  meta_contain_same.hpp  movable_value.hpp  product_type.hpp  prop.hpp  receiver.hpp  run_loop.hpp  schedule_from.hpp  scope_token.hpp  sender_adaptor_closure.hpp  sender_awaitable.hpp  sender_decompose.hpp  sends_stopped.hpp  set_error.hpp  simple_counting_scope.hpp  (+10 more)
infra/: .beman_submodule
src/beman/execution/: CMakeLists.txt
tests/beman/execution/: CMakeLists.txt  exec-associate.test.cpp  exec-bulk.test.cpp  exec-general.test.cpp  exec-let.test.cpp  exec-opstate-start.test.cpp  exec-prop.test.cpp  exec-scope-concepts.test.cpp  exec-scope-counting.test.cpp  exec-scope-simple-counting.test.cpp  exec-set-error.test.cpp  exec-set-stopped.test.cpp  exec-set-value.test.cpp  exec-spawn-future.test.cpp  exec-spawn.test.cpp  exec-stop-when.test.cpp  exec-then.test.cpp  issue-144.test.cpp  issue-174.test.cpp  issue-186.test.cpp  stopcallback-cons.test.cpp  stopcallback-general.test.cpp  stopcallback-inplace-general.test.cpp  stoptoken-concepts.test.cpp  thread-stoptoken-syn.compile.test.cpp
(+2 files in other folders)
